--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "python-dotenv (>=1.2.1,<2.0.0)",
     "redis (>=7.0.1,<8.0.0)",
     "klines @ git+https://github.com/pyostr-traiding/klines.git",
+    "cachetools (>=6.2.1,<7.0.0)",
 ]
 
 
